[Major] Rename Tail4j to LumineLog across the project
Renamed all occurrences of "Tail4j" to "LumineLog," including package names, file paths, and application identifiers. Updated FXML files, scripts, module definitions, and POM metadata to reflect the new name. Ensured compatibility and consistency across tests, resources, and deployment configurations.